tests/idris2/error/perror008/Issue710a.idr
module Issue710a

record r where
  constructor MkR
